---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/enum_pattern_nested.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::arcorn;
    #[arcorn::rewrite]
    pub enum Baz {
        Baz_Some(i32),
        Baz_None(()),
    }
    #[arcorn::rewrite]
    pub enum Foo {
        Foo_Bar(Baz),
        Foo_None(()),
    }
    pub fn x_9() -> () {
        let x_8: () = ();
        (x_8.clone())
    }
    pub fn main() -> () {
        let x_0: i32 = 5i32;
        let x_1: Baz = arcorn::enwrap!(Baz_Some, (x_0.clone()));
        let x_2: Foo = arcorn::enwrap!(Foo_Bar, (x_1.clone()));
        let x_3: bool = arcorn::is!(Foo_Bar, (x_2.clone()));
        let x_D: () = if (x_3.clone()) {
            let x_4: Baz = arcorn::unwrap!(Foo_Bar, (x_2.clone()));
            let x_5: bool = arcorn::is!(Baz_Some, (x_4.clone()));
            let x_C: () = if (x_5.clone()) {
                let x_6: i32 = arcorn::unwrap!(Baz_Some, (x_4.clone()));
                let x_7: () = ();
                (x_7.clone())
            } else {
                let x_A: Box<dyn arcorn::ArcornFn() -> ()> =
                    Box::new(x_9) as Box<dyn arcorn::ArcornFn() -> ()>;
                let x_B: () = (x_A.clone())();
                (x_B.clone())
            };
            (x_C.clone())
        } else {
            let x_A: Box<dyn arcorn::ArcornFn() -> ()> =
                Box::new(x_9) as Box<dyn arcorn::ArcornFn() -> ()>;
            let x_B: () = (x_A.clone())();
            (x_B.clone())
        };
        (x_D.clone())
    }
}
pub use arc_script_output::*;


